--- a/index.html
+++ b/index.html
@@ -1,8 +1,50 @@
-<!DOCTYPE HTML>
-<head>
-    <title>Alize Pitel - Portfolio</title>
-</head>
-<body>
-    <h1>It Works!</h1>
-    <script type="text/javascript" src="js/main.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="./css/owl.carousel.css">
+		<link rel="stylesheet" href="./css/owl.theme.css">
+		<link rel="stylesheet" href="./css/custom.css">
+		<title>alizé pitel | website</title>
+	</head>
+	<body>
+		<div id="title">
+			<span id="title_span">Alizé Pitel</span>
+		</div>
+		<div id="content">
+			<div id="home">
+				<div id="carousel">
+				</div>
+			</div>
+			<div id="work">
+				<h1>Work : </h1>
+			</div>
+			<div id="about">
+				<h1>About : </h1>
+			</div>
+			<div id="contact">
+				<h1>Contact : </h1>
+			</div>
+		</div>
+		<div id="work">
+				<h1>Work : </h1>
+			</div>
+			<div id="about">
+				<h1>About : </h1>
+			</div>
+			<div id="contact">
+				<h1>Contact : </h1>
+			</div>
+		<div id='menu'>
+				<span id="home-link" class="link">Home</span>
+				<span id="work-link" class="link">Work</span>
+				<span id="about-link" class="link">About</span>
+				<span id="contact-link" class="link">Contact</span>
+		</div>
+	</body>
+	<script src="./js/jquery-2.0.3.min.js"></script>
+	<script src="./js/owl.carousel.min.js"></script>
+	<script src="./js/custom.js"></script>
+</html>
