--- a/index.html
+++ b/index.html
@@ -23,17 +23,41 @@
             </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="img_chania.jpg" alt="Chania">
+                <div class="item">
+                    <img src="./img/abc/motif.jpg" alt="abecedaire">
                 </div>
                 <div class="item">
-                    <img src="./img/abc/motif.jpg" alt="Chania">
+                    <img src="./img/badgirls/motif.jpg" alt="badgirlsdontcry">
                 </div>
                 <div class="item">
-                    <img src="img_flower.jpg" alt="Flower">
+                    <img src="./img/boygeorges/motif.jpg" alt="boygeorges">
                 </div>
                 <div class="item">
-                    <img src="img_flower2.jpg" alt="Flower">
+                    <img src="./img/colorama/motif.jpg" alt="colorama">
+                </div>
+                <div class="item">
+                    <img src="./img/flower/motif.jpg" alt="flower">
+                </div>
+                <div class="item">
+                    <img src="./img/gameover/motif.jpg" alt="gameover">
+                </div>
+                <div class="item">
+                    <img src="./img/hereandnow/motif.jpg" alt="hereandnow">
+                </div>
+                <div class="item">
+                    <img src="./img/monster/motif.jpg" alt="monster">
+                </div>
+                <div class="item">
+                    <img src="./img/palmier/motif.jpg" alt="palmier">
+                </div>
+                <div class="item">
+                    <img src="./img/palmier2/motif.jpg" alt="palmier2">
+                </div>
+                <div class="item">
+                    <img src="./img/print/motif.jpg" alt="print">
+                </div>
+                <div class="item">
+                    <img src="./img/scaryallover/motif.jpg" alt="scaryallover">
                 </div>
             </div>
             <!-- Left and right controls -->
